k8s/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-web
spec:
  gatewayClassName: app-example
  listeners:
  - protocol: HTTP
    port: 80
    name: app-web-gw
    allowedRoutes:
      namespaces:
        from: Same
