k8s/routes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  parentRefs:
  - name: app-web
  rules:
  - backendRefs:
    - name: frontend-svc
      port: 80
